BILI Gain: $ 23.27 Win %: 68.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5
BILI Gain: $ -5.42 Win %: 63.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_TR_QP_DB10
BILI Gain: $ 17.89 Win %: 68.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV_TR_DB10
BILI Gain: $ 13.96 Win %: 52.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV_AV_DB10
BILI Gain: $ 14.29 Win %: 57.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV_AL_DB10
BILI Gain: $ -11.44 Win %: 47.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV_QP_DB10
BILI Gain: $ 14.56 Win %: 63.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_HM_TR_DB10
BILI Gain: $ 16.14 Win %: 63.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_HM_AV_DB10
BILI Gain: $ -7.83 Win %: 52.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_HM_QP_DB10
BILI Gain: $ 23.37 Win %: 73.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_IT_QL_DB10
BILI Gain: $ -2.95 Win %: 78.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_IT_QP_DB10
BILI Gain: $ 17.77 Win %: 57.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_TR_IR3
BILI Gain: $ -8.08 Win %: 47.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_TR_QP
BILI Gain: $ -10.2 Win %: 42.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_QP_IR3
BILI Gain: $ 11.54 Win %: 52.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV_TR
BILI Gain: $ -1.62 Win %: 47.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV_AV
BILI Gain: $ -2.6 Win %: 52.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV_AL
BILI Gain: $ -18.04 Win %: 42.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV_QP
BILI Gain: $ 10.59 Win %: 52.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_HM_TR
BILI Gain: $ -1.47 Win %: 47.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_HM_AV
BILI Gain: $ -19.69 Win %: 42.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_HM_QP
BILI Gain: $ 9.03 Win %: 63.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_IT_QL
BILI Gain: $ -5.29 Win %: 47.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_IT_QP
BILI Gain: $ 23.27 Win %: 68.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_AO_AC
BILI Gain: $ 9.77 Win %: 52.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV
BILI Gain: $ 6.77 Win %: 57.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_IR3
BILI Gain: $ 16.77 Win %: 57.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_TR
BILI Gain: $ -2.26 Win %: 36.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_AV
BILI Gain: $ 4.15 Win %: 57.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_AL
BILI Gain: $ 4.89 Win %: 42.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_VI
BILI Gain: $ 4.07 Win %: 57.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_LI
BILI Gain: $ -9.05 Win %: 42.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_QP
BILI Gain: $ 17.78 Win %: 63.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_HM
BILI Gain: $ 13.67 Win %: 57.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_SS
BILI Gain: $ 16.03 Win %: 57.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_QL
BILI Gain: $ 26.97 Win %: 73.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_DB10
BILI Gain: $ 23.27 Win %: 68.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_AO
BILI Gain: $ 23.27 Win %: 68.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_AC
BILI Gain: $ 16.12 Win %: 73.00 in 19 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_IT
BILI Gain: $ -1.94 Win %: 63.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_TR_QP_DB15
BILI Gain: $ 23.96 Win %: 63.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV_TR_DB15
BILI Gain: $ 12.94 Win %: 52.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AV_DB15
BILI Gain: $ 16.63 Win %: 57.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AL_DB15
BILI Gain: $ 1.28 Win %: 57.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV_QP_DB15
BILI Gain: $ 14.19 Win %: 73.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_HM_TR_DB15
BILI Gain: $ 5.63 Win %: 57.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AV_DB15
BILI Gain: $ -4.07 Win %: 63.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_HM_QP_DB15
BILI Gain: $ 23.05 Win %: 68.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QL_DB15
BILI Gain: $ -0.26 Win %: 78.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QP_DB15
BILI Gain: $ 17.47 Win %: 63.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_TR_IR4
BILI Gain: $ -6.39 Win %: 42.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_TR_QP
BILI Gain: $ -6.3 Win %: 47.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_QP_IR4
BILI Gain: $ 13.78 Win %: 63.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV_TR
BILI Gain: $ -6.5 Win %: 36.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AV
BILI Gain: $ 8.46 Win %: 47.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AL
BILI Gain: $ -13.4 Win %: 47.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV_QP
BILI Gain: $ 8.07 Win %: 57.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_HM_TR
BILI Gain: $ -6.39 Win %: 42.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AV
BILI Gain: $ -16.02 Win %: 42.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_HM_QP
BILI Gain: $ 10.13 Win %: 52.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QL
BILI Gain: $ -1.13 Win %: 68.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QP
BILI Gain: $ -41.24 Win %: 47.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_AO_AC
BILI Gain: $ 6.21 Win %: 52.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV
BILI Gain: $ 16.74 Win %: 57.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_IR4
BILI Gain: $ 14.59 Win %: 63.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_TR
BILI Gain: $ -14.21 Win %: 31.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_AV
BILI Gain: $ 8.29 Win %: 36.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_AL
BILI Gain: $ -1.01 Win %: 52.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_VI
BILI Gain: $ 24.79 Win %: 63.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_LI
BILI Gain: $ -9.6 Win %: 47.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_QP
BILI Gain: $ 2.87 Win %: 42.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_HM
BILI Gain: $ 17.11 Win %: 52.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_SS
BILI Gain: $ 13.25 Win %: 47.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_QL
BILI Gain: $ 28.42 Win %: 73.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_DB15
BILI Gain: $ 15.16 Win %: 52.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_AO
BILI Gain: $ 3.16 Win %: 52.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_AC
BILI Gain: $ 14.5 Win %: 57.00 in 19 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_IT
BILI Gain: $ -5.5 Win %: 57.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_TR_QP_DB15
BILI Gain: $ 18.83 Win %: 73.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_TR_DB15
BILI Gain: $ 3.69 Win %: 52.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AV_DB15
BILI Gain: $ 16.28 Win %: 57.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AL_DB15
BILI Gain: $ -5.17 Win %: 47.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_QP_DB15
BILI Gain: $ 19.38 Win %: 73.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_TR_DB15
BILI Gain: $ 9.79 Win %: 52.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_AV_DB15
BILI Gain: $ 1.96 Win %: 52.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_QP_DB15
BILI Gain: $ 28.19 Win %: 73.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QL_DB15
BILI Gain: $ -0.92 Win %: 68.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QP_DB15
BILI Gain: $ 24.82 Win %: 68.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_TR_IR4
BILI Gain: $ -10.34 Win %: 52.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_TR_QP
BILI Gain: $ -5.58 Win %: 52.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_QP_IR4
BILI Gain: $ 13.06 Win %: 63.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_TR
BILI Gain: $ -12.71 Win %: 31.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AV
BILI Gain: $ 0.02 Win %: 42.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AL
BILI Gain: $ -26.56 Win %: 42.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_QP
BILI Gain: $ 7.3 Win %: 57.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_TR
BILI Gain: $ -10.08 Win %: 36.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_AV
BILI Gain: $ -23.5 Win %: 31.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_QP
BILI Gain: $ 10.93 Win %: 52.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QL
BILI Gain: $ -3.34 Win %: 63.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QP
BILI Gain: $ -102.52 Win %: 36.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AO_AC
BILI Gain: $ 1.52 Win %: 57.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV
BILI Gain: $ 24.96 Win %: 57.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IR4
BILI Gain: $ 11.85 Win %: 57.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_TR
BILI Gain: $ -11.81 Win %: 31.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AV
BILI Gain: $ 9.19 Win %: 42.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AL
BILI Gain: $ 1.81 Win %: 47.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_VI
BILI Gain: $ 8.95 Win %: 47.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_LI
BILI Gain: $ -12.95 Win %: 42.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_QP
BILI Gain: $ 5.86 Win %: 42.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM
BILI Gain: $ 16.12 Win %: 52.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_SS
BILI Gain: $ 13.45 Win %: 52.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_QL
BILI Gain: $ 30.06 Win %: 68.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_DB15
BILI Gain: $ 23.35 Win %: 57.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AO
BILI Gain: $ -22.03 Win %: 42.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AC
BILI Gain: $ 12.94 Win %: 52.00 in 19 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT
BILI Gain: $ -5.42 Win %: 63.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_TR_QP_DB10
BILI Gain: $ 17.89 Win %: 68.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_RV_TR_DB10
BILI Gain: $ 13.96 Win %: 52.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_RV_AV_DB10
BILI Gain: $ 14.29 Win %: 57.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_RV_AL_DB10
BILI Gain: $ -11.44 Win %: 47.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_RV_QP_DB10
BILI Gain: $ 14.56 Win %: 63.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_HM_TR_DB10
BILI Gain: $ 16.14 Win %: 63.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_HM_AV_DB10
BILI Gain: $ -7.83 Win %: 52.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_HM_QP_DB10
BILI Gain: $ 23.37 Win %: 73.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_IT_QL_DB10
BILI Gain: $ -2.95 Win %: 78.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_IT_QP_DB10
BILI Gain: $ 17.77 Win %: 57.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_TR_IR3
BILI Gain: $ -8.08 Win %: 47.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_TR_QP
BILI Gain: $ -10.2 Win %: 42.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_QP_IR3
BILI Gain: $ 11.54 Win %: 52.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_RV_TR
BILI Gain: $ -1.62 Win %: 47.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_RV_AV
BILI Gain: $ -2.6 Win %: 52.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_RV_AL
BILI Gain: $ -18.04 Win %: 42.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_RV_QP
BILI Gain: $ 10.59 Win %: 52.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_HM_TR
BILI Gain: $ -1.47 Win %: 47.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_HM_AV
BILI Gain: $ -19.69 Win %: 42.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_HM_QP
BILI Gain: $ 9.03 Win %: 63.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_IT_QL
BILI Gain: $ -5.29 Win %: 47.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_IT_QP
BILI Gain: $ 23.27 Win %: 68.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_AO_AC
BILI Gain: $ 9.77 Win %: 52.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_RV
BILI Gain: $ 6.77 Win %: 57.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_IR3
BILI Gain: $ 16.77 Win %: 57.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_TR
BILI Gain: $ -2.26 Win %: 36.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_AV
BILI Gain: $ 4.15 Win %: 57.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_AL
BILI Gain: $ 4.89 Win %: 42.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_VI
BILI Gain: $ 4.07 Win %: 57.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_LI
BILI Gain: $ -9.05 Win %: 42.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_QP
BILI Gain: $ 17.78 Win %: 63.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_HM
BILI Gain: $ 13.67 Win %: 57.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_SS
BILI Gain: $ 16.03 Win %: 57.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_QL
BILI Gain: $ 26.97 Win %: 73.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_DB10
BILI Gain: $ 23.27 Win %: 68.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_AO
BILI Gain: $ 23.27 Win %: 68.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_AC
BILI Gain: $ 16.12 Win %: 73.00 in 19 days with algo TB3_HI_QM_OB1_OS1_CB5_CS5_IT
BILI Gain: $ 17.88 Win %: 65.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5
BILI Gain: $ -9.49 Win %: 60.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_TR_QP_DB10
BILI Gain: $ 18.62 Win %: 70.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV_TR_DB10
BILI Gain: $ 16.41 Win %: 55.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV_AV_DB10
BILI Gain: $ 15.38 Win %: 60.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV_AL_DB10
BILI Gain: $ -15.13 Win %: 45.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV_QP_DB10
BILI Gain: $ 8.54 Win %: 60.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_HM_TR_DB10
BILI Gain: $ 13.72 Win %: 65.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_HM_AV_DB10
BILI Gain: $ -13.55 Win %: 50.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_HM_QP_DB10
BILI Gain: $ 22.11 Win %: 70.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_IT_QL_DB10
BILI Gain: $ -2.79 Win %: 80.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_IT_QP_DB10
BILI Gain: $ 11.68 Win %: 55.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_TR_IR3
BILI Gain: $ -16.71 Win %: 45.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_TR_QP
BILI Gain: $ -16.72 Win %: 40.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_QP_IR3
BILI Gain: $ -7.47 Win %: 45.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV_TR
BILI Gain: $ -10.64 Win %: 30.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV_AV
BILI Gain: $ 1.03 Win %: 55.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV_AL
BILI Gain: $ -22.79 Win %: 40.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV_QP
BILI Gain: $ 12.31 Win %: 55.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_HM_TR
BILI Gain: $ -7.59 Win %: 45.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_HM_AV
BILI Gain: $ -18.56 Win %: 45.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_HM_QP
BILI Gain: $ 6.4 Win %: 60.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_IT_QL
BILI Gain: $ -11.63 Win %: 45.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_IT_QP
BILI Gain: $ 21.27 Win %: 65.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_AO_AC
BILI Gain: $ 9.59 Win %: 50.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV
BILI Gain: $ 8.19 Win %: 60.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_IR3
BILI Gain: $ 11.11 Win %: 55.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_TR
BILI Gain: $ -4.23 Win %: 35.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_AV
BILI Gain: $ -0.85 Win %: 50.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_AL
BILI Gain: $ 0.15 Win %: 40.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_VI
BILI Gain: $ 6.35 Win %: 60.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_LI
BILI Gain: $ -11.26 Win %: 40.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_QP
BILI Gain: $ 19.29 Win %: 65.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_HM
BILI Gain: $ 2.93 Win %: 55.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_SS
BILI Gain: $ 17.24 Win %: 60.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_QL
BILI Gain: $ 25.65 Win %: 70.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_DB10
BILI Gain: $ 21.27 Win %: 65.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_AO
BILI Gain: $ 21.27 Win %: 65.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_AC
BILI Gain: $ 11.25 Win %: 70.00 in 20 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_IT
BILI Gain: $ -6.22 Win %: 60.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_TR_QP_DB15
BILI Gain: $ 20.01 Win %: 60.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV_TR_DB15
BILI Gain: $ 15.6 Win %: 60.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AV_DB15
BILI Gain: $ 26.43 Win %: 75.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AL_DB15
BILI Gain: $ -1.53 Win %: 55.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV_QP_DB15
BILI Gain: $ 6.86 Win %: 70.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_HM_TR_DB15
BILI Gain: $ 3.89 Win %: 55.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AV_DB15
BILI Gain: $ -9.75 Win %: 60.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_HM_QP_DB15
BILI Gain: $ 21.94 Win %: 65.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QL_DB15
BILI Gain: $ -1.01 Win %: 75.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QP_DB15
BILI Gain: $ 15.51 Win %: 70.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_TR_IR4
BILI Gain: $ -37.73 Win %: 40.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_TR_QP
BILI Gain: $ -11.61 Win %: 45.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_QP_IR4
BILI Gain: $ 9.8 Win %: 60.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV_TR
BILI Gain: $ -14.08 Win %: 35.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AV
BILI Gain: $ 15.22 Win %: 50.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AL
BILI Gain: $ -17.21 Win %: 45.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV_QP
BILI Gain: $ 4.09 Win %: 55.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_HM_TR
BILI Gain: $ -7.21 Win %: 40.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AV
BILI Gain: $ -18.12 Win %: 40.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_HM_QP
BILI Gain: $ 5.48 Win %: 50.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QL
BILI Gain: $ -1.21 Win %: 65.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QP
BILI Gain: $ -42.53 Win %: 45.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_AO_AC
BILI Gain: $ 4.08 Win %: 50.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV
BILI Gain: $ 14.73 Win %: 60.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_IR4
BILI Gain: $ 11.75 Win %: 60.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_TR
BILI Gain: $ -12.55 Win %: 35.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_AV
BILI Gain: $ 6.03 Win %: 35.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_AL
BILI Gain: $ -1.96 Win %: 50.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_VI
BILI Gain: $ 22.33 Win %: 60.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_LI
BILI Gain: $ -9.7 Win %: 45.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_QP
BILI Gain: $ -1.11 Win %: 40.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_HM
BILI Gain: $ 13.13 Win %: 50.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_SS
BILI Gain: $ 14.43 Win %: 50.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_QL
BILI Gain: $ 30.11 Win %: 75.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_DB15
BILI Gain: $ 5.95 Win %: 50.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_AO
BILI Gain: $ 4.92 Win %: 55.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_AC
BILI Gain: $ 10.52 Win %: 55.00 in 20 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_IT
BILI Gain: $ -4.36 Win %: 60.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_TR_QP_DB15
BILI Gain: $ 18.63 Win %: 75.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_TR_DB15
BILI Gain: $ 5.35 Win %: 55.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AV_DB15
BILI Gain: $ 11.25 Win %: 55.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AL_DB15
BILI Gain: $ -7.16 Win %: 50.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_QP_DB15
BILI Gain: $ 18.12 Win %: 70.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_TR_DB15
BILI Gain: $ 3.7 Win %: 50.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_AV_DB15
BILI Gain: $ -4.96 Win %: 50.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_QP_DB15
BILI Gain: $ 27.08 Win %: 70.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QL_DB15
BILI Gain: $ -2.13 Win %: 65.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QP_DB15
BILI Gain: $ 6.27 Win %: 65.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_TR_IR4
BILI Gain: $ -15.08 Win %: 50.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_TR_QP
BILI Gain: $ -13.92 Win %: 50.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_QP_IR4
BILI Gain: $ 5.58 Win %: 60.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_TR
BILI Gain: $ -13.34 Win %: 35.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AV
BILI Gain: $ 4.64 Win %: 40.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AL
BILI Gain: $ -35.1 Win %: 40.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_QP
BILI Gain: $ 3.53 Win %: 55.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_TR
BILI Gain: $ -10.95 Win %: 35.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_AV
BILI Gain: $ -33.22 Win %: 30.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_QP
BILI Gain: $ 9.26 Win %: 50.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QL
BILI Gain: $ -8.73 Win %: 60.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QP
BILI Gain: $ -113.38 Win %: 30.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AO_AC
BILI Gain: $ -5.48 Win %: 55.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV
BILI Gain: $ 18.86 Win %: 55.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IR4
BILI Gain: $ 4.37 Win %: 55.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_TR
BILI Gain: $ -14.35 Win %: 30.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AV
BILI Gain: $ 11.83 Win %: 45.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AL
BILI Gain: $ 1.69 Win %: 45.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_VI
BILI Gain: $ 3.14 Win %: 45.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_LI
BILI Gain: $ -9.82 Win %: 45.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_QP
BILI Gain: $ -1.62 Win %: 40.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM
BILI Gain: $ 11.55 Win %: 50.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_SS
BILI Gain: $ 10.54 Win %: 50.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_QL
BILI Gain: $ 17.29 Win %: 65.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_DB15
BILI Gain: $ 16.09 Win %: 55.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AO
BILI Gain: $ -28.42 Win %: 40.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AC
BILI Gain: $ 5.46 Win %: 50.00 in 20 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT
BILI Gain: $ 2.28 Win %: 70.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_TR_QP_DB15
BILI Gain: $ 21.72 Win %: 70.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV_TR_DB15
BILI Gain: $ 16.82 Win %: 60.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV_AV_DB15
BILI Gain: $ 14.69 Win %: 60.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV_AL_DB15
BILI Gain: $ 2.51 Win %: 60.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV_QP_DB15
BILI Gain: $ 19.67 Win %: 75.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_HM_TR_DB15
BILI Gain: $ 12.05 Win %: 50.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_HM_AV_DB15
BILI Gain: $ 0.12 Win %: 70.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_HM_QP_DB15
BILI Gain: $ 27.57 Win %: 80.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_IT_QL_DB15
BILI Gain: $ 1.96 Win %: 90.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_IT_QP_DB15
BILI Gain: $ 10.86 Win %: 65.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_TR_IR4
BILI Gain: $ -2.28 Win %: 65.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_TR_QP
BILI Gain: $ -9.44 Win %: 45.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_QP_IR4
BILI Gain: $ 14.76 Win %: 65.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV_TR
BILI Gain: $ 2.99 Win %: 45.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV_AV
BILI Gain: $ 13.17 Win %: 45.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV_AL
BILI Gain: $ -6.95 Win %: 55.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV_QP
BILI Gain: $ 4.32 Win %: 55.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_HM_TR
BILI Gain: $ 5.72 Win %: 45.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_HM_AV
BILI Gain: $ -14.15 Win %: 45.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_HM_QP
BILI Gain: $ 13.26 Win %: 65.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_IT_QL
BILI Gain: $ -0.07 Win %: 95.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_IT_QP
BILI Gain: $ 8.3 Win %: 50.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_AO_AC
BILI Gain: $ 11.12 Win %: 65.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV
BILI Gain: $ 16.91 Win %: 65.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_IR4
BILI Gain: $ 16.77 Win %: 65.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_TR
BILI Gain: $ 1.35 Win %: 45.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_AV
BILI Gain: $ 11.96 Win %: 50.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_AL
BILI Gain: $ 2.66 Win %: 55.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_VI
BILI Gain: $ 17.04 Win %: 75.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_LI
BILI Gain: $ -3.63 Win %: 65.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_QP
BILI Gain: $ 5.36 Win %: 50.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_HM
BILI Gain: $ 16.62 Win %: 60.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_SS
BILI Gain: $ 17.36 Win %: 55.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_QL
BILI Gain: $ 24.15 Win %: 70.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_DB15
BILI Gain: $ 19.07 Win %: 60.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_AO
BILI Gain: $ 16.11 Win %: 70.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_AC
BILI Gain: $ 14.5 Win %: 70.00 in 20 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_IT
BILI Gain: $ 22.73 Win %: 66.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5
BILI Gain: $ -15.87 Win %: 57.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_TR_QP_DB10
BILI Gain: $ 18.03 Win %: 66.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV_TR_DB10
BILI Gain: $ 14.35 Win %: 52.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV_AV_DB10
BILI Gain: $ 14.69 Win %: 57.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV_AL_DB10
BILI Gain: $ -17.4 Win %: 42.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV_QP_DB10
BILI Gain: $ 9.51 Win %: 61.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_HM_TR_DB10
BILI Gain: $ 9.94 Win %: 57.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_HM_AV_DB10
BILI Gain: $ -13.42 Win %: 52.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_HM_QP_DB10
BILI Gain: $ 22.22 Win %: 71.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_IT_QL_DB10
BILI Gain: $ -2.61 Win %: 80.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_IT_QP_DB10
BILI Gain: $ 13.05 Win %: 57.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_TR_IR3
BILI Gain: $ -16.36 Win %: 47.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_TR_QP
BILI Gain: $ -18.97 Win %: 38.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_QP_IR3
BILI Gain: $ 7.34 Win %: 52.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV_TR
BILI Gain: $ -12.3 Win %: 28.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV_AV
BILI Gain: $ -5.2 Win %: 52.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV_AL
BILI Gain: $ -25.53 Win %: 38.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV_QP
BILI Gain: $ 6.39 Win %: 52.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_HM_TR
BILI Gain: $ -10.09 Win %: 42.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_HM_AV
BILI Gain: $ -7.31 Win %: 52.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_HM_AL
BILI Gain: $ -27.65 Win %: 38.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_HM_QP
BILI Gain: $ 6.51 Win %: 61.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_IT_QL
BILI Gain: $ -3.9 Win %: 52.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_IT_QP
BILI Gain: $ 22.73 Win %: 66.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_AO_AC
BILI Gain: $ -25.27 Win %: 33.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_QP_PM
BILI Gain: $ 6.74 Win %: 47.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_RV
BILI Gain: $ -0.27 Win %: 52.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_IR3
BILI Gain: $ 12.57 Win %: 57.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_TR
BILI Gain: $ -6.29 Win %: 33.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_AV
BILI Gain: $ 1.63 Win %: 52.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_AL
BILI Gain: $ 4.19 Win %: 42.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_VI
BILI Gain: $ 2.28 Win %: 57.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_LI
BILI Gain: $ -14.75 Win %: 42.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_QP
BILI Gain: $ 17.24 Win %: 61.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_HM
BILI Gain: $ 14.62 Win %: 61.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_SS
BILI Gain: $ 14.86 Win %: 57.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_QL
BILI Gain: $ 27.11 Win %: 71.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_DB10
BILI Gain: $ 22.73 Win %: 66.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_AO
BILI Gain: $ 18.84 Win %: 66.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_AC
BILI Gain: $ 14.23 Win %: 71.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_IT
BILI Gain: $ 2.26 Win %: 42.00 in 21 days with algo TB3_HI_QM_OB2_OS2_CB5_CS5_PM
BILI Gain: $ -6.28 Win %: 61.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_TR_QP_DB15
BILI Gain: $ 20.52 Win %: 61.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV_TR_DB15
BILI Gain: $ 16.23 Win %: 57.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AV_DB15
BILI Gain: $ 21.97 Win %: 66.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AL_DB15
BILI Gain: $ -3.91 Win %: 52.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV_QP_DB15
BILI Gain: $ 11.29 Win %: 71.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_HM_TR_DB15
BILI Gain: $ 3.95 Win %: 57.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AV_DB15
BILI Gain: $ -8.26 Win %: 61.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_HM_QP_DB15
BILI Gain: $ 22.12 Win %: 66.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QL_DB15
BILI Gain: $ -0.11 Win %: 76.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QP_DB15
BILI Gain: $ 12.83 Win %: 57.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_TR_IR4
BILI Gain: $ -12.27 Win %: 38.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_TR_QP
BILI Gain: $ -13.11 Win %: 42.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_QP_IR4
BILI Gain: $ 8.81 Win %: 57.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV_TR
BILI Gain: $ -17.69 Win %: 33.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AV
BILI Gain: $ 11.13 Win %: 47.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AL
BILI Gain: $ -20.88 Win %: 42.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV_QP
BILI Gain: $ 3.76 Win %: 52.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_HM_TR
BILI Gain: $ -12.08 Win %: 38.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AV
BILI Gain: $ -4.77 Win %: 28.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AL
BILI Gain: $ -22.51 Win %: 38.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_HM_QP
BILI Gain: $ 7.28 Win %: 47.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QL
BILI Gain: $ -1.21 Win %: 66.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QP
BILI Gain: $ -46.39 Win %: 47.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_AO_AC
BILI Gain: $ -8.74 Win %: 38.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_QP_PM
BILI Gain: $ 3.52 Win %: 47.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_RV
BILI Gain: $ 12.76 Win %: 57.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_IR4
BILI Gain: $ 9.95 Win %: 57.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_TR
BILI Gain: $ -19.38 Win %: 28.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_AV
BILI Gain: $ 1.97 Win %: 33.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_AL
BILI Gain: $ -1.39 Win %: 52.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_VI
BILI Gain: $ 23.62 Win %: 61.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_LI
BILI Gain: $ -15.71 Win %: 42.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_QP
BILI Gain: $ -0.98 Win %: 42.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_HM
BILI Gain: $ 13.13 Win %: 52.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_SS
BILI Gain: $ 10.4 Win %: 42.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_QL
BILI Gain: $ 25.69 Win %: 71.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_DB15
BILI Gain: $ 7.99 Win %: 52.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_AO
BILI Gain: $ -0.69 Win %: 47.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_AC
BILI Gain: $ 10.56 Win %: 57.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_IT
BILI Gain: $ -1.67 Win %: 47.00 in 21 days with algo TB2_HL_LO_QM_OB3_OS3_CB5_CS5_PM
BILI Gain: $ -11.04 Win %: 57.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_TR_QP_DB15
BILI Gain: $ 11.93 Win %: 66.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_TR_DB15
BILI Gain: $ 1.87 Win %: 47.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AV_DB15
BILI Gain: $ 16.66 Win %: 57.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AL_DB15
BILI Gain: $ -12.2 Win %: 42.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_QP_DB15
BILI Gain: $ 16.48 Win %: 71.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_TR_DB15
BILI Gain: $ 5.82 Win %: 47.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_AV_DB15
BILI Gain: $ -3.49 Win %: 52.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_QP_DB15
BILI Gain: $ 27.26 Win %: 71.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QL_DB15
BILI Gain: $ -0.77 Win %: 66.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QP_DB15
BILI Gain: $ 15.16 Win %: 57.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_TR_IR4
BILI Gain: $ -19.83 Win %: 52.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_TR_QP
BILI Gain: $ -14.61 Win %: 47.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_QP_IR4
BILI Gain: $ 1.18 Win %: 57.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_TR
BILI Gain: $ -17.69 Win %: 33.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AV
BILI Gain: $ 0.58 Win %: 38.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AL
BILI Gain: $ -39.23 Win %: 38.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_QP
BILI Gain: $ -1.13 Win %: 52.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_TR
BILI Gain: $ -17.49 Win %: 33.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_AV
BILI Gain: $ -4.89 Win %: 33.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_AL
BILI Gain: $ -34.41 Win %: 28.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_QP
BILI Gain: $ 6.42 Win %: 47.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QL
BILI Gain: $ -13.06 Win %: 61.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QP
BILI Gain: $ -108.53 Win %: 33.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AO_AC
BILI Gain: $ -10.58 Win %: 42.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_QP_PM
BILI Gain: $ -9.22 Win %: 52.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV
BILI Gain: $ 18.86 Win %: 57.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IR4
BILI Gain: $ 3.71 Win %: 52.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_TR
BILI Gain: $ -18.7 Win %: 28.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AV
BILI Gain: $ 2.78 Win %: 38.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AL
BILI Gain: $ 0.39 Win %: 47.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_VI
BILI Gain: $ 7.86 Win %: 47.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_LI
BILI Gain: $ -23.36 Win %: 38.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_QP
BILI Gain: $ -2.09 Win %: 38.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM
BILI Gain: $ 8.64 Win %: 52.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_SS
BILI Gain: $ 8.94 Win %: 47.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_QL
BILI Gain: $ 27.33 Win %: 66.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_DB15
BILI Gain: $ 16.18 Win %: 57.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AO
BILI Gain: $ -28.66 Win %: 38.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AC
BILI Gain: $ 5.5 Win %: 52.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT
BILI Gain: $ -9.71 Win %: 33.00 in 21 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_PM
BILI Gain: $ -2.37 Win %: 61.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_TR_QP_DB15
BILI Gain: $ 21.08 Win %: 66.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV_TR_DB15
BILI Gain: $ 14.59 Win %: 57.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV_AV_DB15
BILI Gain: $ 16.72 Win %: 57.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV_AL_DB15
BILI Gain: $ 0.45 Win %: 57.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV_QP_DB15
BILI Gain: $ 16.56 Win %: 71.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_HM_TR_DB15
BILI Gain: $ 9.3 Win %: 47.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_HM_AV_DB15
BILI Gain: $ -3.58 Win %: 66.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_HM_QP_DB15
BILI Gain: $ 29.22 Win %: 80.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_IT_QL_DB15
BILI Gain: $ 0.76 Win %: 90.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_IT_QP_DB15
BILI Gain: $ 12.08 Win %: 66.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_TR_IR4
BILI Gain: $ -2.66 Win %: 61.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_TR_QP
BILI Gain: $ -9.89 Win %: 42.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_QP_IR4
BILI Gain: $ 14.12 Win %: 61.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV_TR
BILI Gain: $ 0.76 Win %: 42.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV_AV
BILI Gain: $ 12.32 Win %: 47.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV_AL
BILI Gain: $ -9.01 Win %: 52.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV_QP
BILI Gain: $ 5.8 Win %: 57.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_HM_TR
BILI Gain: $ 2.97 Win %: 42.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_HM_AV
BILI Gain: $ 2.69 Win %: 33.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_HM_AL
BILI Gain: $ -12.38 Win %: 52.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_HM_QP
BILI Gain: $ 14.91 Win %: 66.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_IT_QL
BILI Gain: $ 0.12 Win %: 95.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_IT_QP
BILI Gain: $ 10.03 Win %: 52.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_AO_AC
BILI Gain: $ -1.37 Win %: 85.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_QP_PM
BILI Gain: $ 9.51 Win %: 61.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_RV
BILI Gain: $ 18.56 Win %: 66.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_IR4
BILI Gain: $ 17.99 Win %: 66.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_TR
BILI Gain: $ -0.88 Win %: 42.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_AV
BILI Gain: $ 10.12 Win %: 47.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_AL
BILI Gain: $ 2.09 Win %: 52.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_VI
BILI Gain: $ 16.6 Win %: 71.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_LI
BILI Gain: $ -3.83 Win %: 61.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_QP
BILI Gain: $ 2.62 Win %: 47.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_HM
BILI Gain: $ 18.15 Win %: 61.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_SS
BILI Gain: $ 19.01 Win %: 57.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_QL
BILI Gain: $ 28.29 Win %: 76.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_DB15
BILI Gain: $ 16.64 Win %: 61.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_AO
BILI Gain: $ 17.91 Win %: 71.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_AC
BILI Gain: $ 16.15 Win %: 71.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_IT
BILI Gain: $ 0.7 Win %: 80.00 in 21 days with algo TB2_HL_LO_QM_OB5_OS5_CB5_CS5_PM
