Gain: $ 3.08 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB2_CS2
Gain: $ 3.14 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB2_CS2_RV
Gain: $ 0 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB2_CS2_IR5
Gain: $ 1.37 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB2_CS2_TR
Gain: $ -2.91 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB2_CS2_AV
Gain: $ -0.56 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB2_CS2_VI
Gain: $ 2.21 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB2_CS2_AL
Gain: $ 1.46 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB2_CS2_LI
Gain: $ 0.15 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB2_CS2_QP
Gain: $ 3.08 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB2_CS2_HM
Gain: $ 3.08 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB2_CS2_SS
Gain: $ 3.08 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB2_CS2_QL
Gain: $ 3.08 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB2_CS2_DB15
Gain: $ 0 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB2_CS2_TR_IR5
Gain: $ 0 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB2_CS2_QP_IR5
Gain: $ 1.43 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB2_CS2_RV_TR
Gain: $ -1.61 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB2_CS2_RV_AV
Gain: $ 0.21 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB2_CS2_RV_QP
Gain: $ 0.14 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB2_CS2_TR_QP
Gain: $ 1.37 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB2_CS2_HM_TR
Gain: $ -2.91 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB2_CS2_HM_AV
Gain: $ 0.15 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB2_CS2_HM_QP
Gain: $ 3.14 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB1_CS1_RV
Gain: $ 0 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB1_CS1_IR5
Gain: $ 1.37 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB1_CS1_TR
Gain: $ -2.91 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB1_CS1_AV
Gain: $ -0.56 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB1_CS1_VI
Gain: $ 2.21 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB1_CS1_AL
Gain: $ 1.46 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB1_CS1_LI
Gain: $ 0.15 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB1_CS1_QP
Gain: $ 3.08 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB1_CS1_HM
Gain: $ 3.08 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB1_CS1_SS
Gain: $ 3.08 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB1_CS1_QL
Gain: $ 3.08 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB1_CS1_DB15
Gain: $ 0 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB1_CS1_TR_IR5
Gain: $ 0 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB1_CS1_QP_IR5
Gain: $ 1.43 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB1_CS1_RV_TR
Gain: $ -1.61 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB1_CS1_RV_AV
Gain: $ 0.21 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB1_CS1_RV_QP
Gain: $ 0.14 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB1_CS1_TR_QP
Gain: $ 1.37 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB1_CS1_HM_TR
Gain: $ -2.91 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB1_CS1_HM_AV
Gain: $ 0.15 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB1_CS1_HM_QP
Gain: $ 3.25 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB3_CS3_RV
Gain: $ 0 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB3_CS3_IR5
Gain: $ 1.37 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB3_CS3_TR
Gain: $ -2.91 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB3_CS3_AV
Gain: $ -0.15 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB3_CS3_VI
Gain: $ 1.97 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB3_CS3_AL
Gain: $ 1.56 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB3_CS3_LI
Gain: $ 0.48 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB3_CS3_QP
Gain: $ 2.95 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB3_CS3_HM
Gain: $ 2.95 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB3_CS3_SS
Gain: $ 2.95 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB3_CS3_QL
Gain: $ 2.95 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB3_CS3_DB15
Gain: $ 0 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB3_CS3_TR_IR5
Gain: $ 0 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB3_CS3_QP_IR5
Gain: $ 1.43 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB3_CS3_RV_TR
Gain: $ -1.61 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB3_CS3_RV_AV
Gain: $ 0.54 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB3_CS3_RV_QP
Gain: $ 0.14 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB3_CS3_TR_QP
Gain: $ 1.37 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB3_CS3_HM_TR
Gain: $ -2.91 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB3_CS3_HM_AV
Gain: $ 0.48 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB3_OS3_CB3_CS3_HM_QP
Gain: $ 3.25 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB2_OS2_CB3_CS3_RV
Gain: $ 0 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB2_OS2_CB3_CS3_IR5
Gain: $ 1.37 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB2_OS2_CB3_CS3_TR
Gain: $ -2.91 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB2_OS2_CB3_CS3_AV
Gain: $ -0.3 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB2_OS2_CB3_CS3_VI
Gain: $ 1.97 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB2_OS2_CB3_CS3_AL
Gain: $ 2.01 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB2_OS2_CB3_CS3_LI
Gain: $ 0.48 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB2_OS2_CB3_CS3_QP
Gain: $ 2.95 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB2_OS2_CB3_CS3_HM
Gain: $ 2.95 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB2_OS2_CB3_CS3_SS
Gain: $ 2.95 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB2_OS2_CB3_CS3_QL
Gain: $ 2.95 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB2_OS2_CB3_CS3_DB15
Gain: $ 0 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB2_OS2_CB3_CS3_TR_IR5
Gain: $ 0 Win %: 100.00 in 2 days with algo TB2_HL_HI_QM_OB2_OS2_CB3_CS3_QP_IR5
Gain: $ 1.43 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB2_OS2_CB3_CS3_RV_TR
Gain: $ -1.61 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB2_OS2_CB3_CS3_RV_AV
Gain: $ 0.54 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB2_OS2_CB3_CS3_RV_QP
Gain: $ 0.14 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB2_OS2_CB3_CS3_TR_QP
Gain: $ 1.37 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB2_OS2_CB3_CS3_HM_TR
Gain: $ -2.91 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB2_OS2_CB3_CS3_HM_AV
Gain: $ 0.48 Win %: 50.00 in 2 days with algo TB2_HL_HI_QM_OB2_OS2_CB3_CS3_HM_QP
